tests/tooling/fixtures/native/recovery/negative/negative_prototype_duplicate_definition.objc3
// Expected diagnostic code(s): O3S200.
module NegativePrototypeDuplicateDefinition;

fn tick() -> i32;
fn tick() -> i32 {
  return 1;
}
fn tick() -> i32 {
  return 2;
}

fn main() -> i32 {
  return tick();
}
